# egui_example

./: .gitignore  Cargo.toml  README.md  index.html
.github/: copilot-instructions.md
src/: lib.rs  main.rs  shared.rs
